examples/test/testpolicy17183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17183
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key0: value46
      key46: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value34
      podSelector:
        matchLabels:
          key40: value20
          key19: value45
